# Spout

./: .gitignore  AndroidManifest.xml  License.md  README.md  ReadMe.md  settings.gradle
doc/: ReadMe_Pandora.txt  import-summary.txt
docs/: ReadMe_GP2X.txt
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  SpoutNativeLibProxy.cpp  SpoutNativeLibProxy.h  ru_exlmoto_spout_SpoutNativeLibProxy.h
jni/Spout/projects/: Spout.pro  spout.cbp  spout.layout  spoutwin32.cbp
jni/Spout/src/: piece.c  piece.h  spout.c
others/: PXML.xml  createPND.sh
projects/: ReadMe.txt  spoutwin32.layout
res/layout/: activity_spout.xml  dialog_about.xml  spout_launcher.xml
res/values/: strings.xml
res/values-v21/: style.xml
screens/: overlay_controls.xcf
spout/: build.gradle
spout/src/main/: AndroidManifest.xml
spout/src/main/cpp/: Android.mk  CMakeLists.txt  Spout.pro  SpoutNativeLibProxy.h  ru_exlmoto_spout_SpoutNativeLibProxy.h
spout/src/main/cpp/Spout/: piece.c  piece.h  spout.c  spout.h
spout/src/main/java/ru/exlmoto/spout/: SpoutActivity.java
spout/src/main/jni/Spout/docs/: README.GP2X  readme.pandora.txt
spout/src/main/jni/Spout/src/: piece.h
spout/src/main/res/layout/: spout_launcher.xml
spout/src/main/res/values/: strings.xml  style.xml
spout/src/main/web/: Makefile  ReadMe.md  index.html  piece.c  piece.h  spout.c
src/: Spout.pro  config.h  piece.c  piece.h  spout.c  spout.h
src/ru/exlmoto/spout/: SpoutActivity.java  SpoutJoystickView.java  SpoutLauncher.java  SpoutNativeLibProxy.java  SpoutNativeSurface.java  SpoutTouchButtonsRects.java
